--- a/Itgm/Itgm/App.config
+++ b/Itgm/Itgm/App.config
@@ -2,7 +2,7 @@
 <configuration>
     <appSettings>
         <add key="login" value="iesopoval" />
-        <add key="password" value="1234567u" />
+        <add key="password" value="1234567" />
     </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
