--- a/Itgm/Itgm/App.config
+++ b/Itgm/Itgm/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="login" value="iesopoval" />
-    <add key="password" value="1234567" />
+    <add key="login" value="" />
+    <add key="password" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
